# ltsim

./: .gitignore  LICENSE  README.md  ThirdPartyNotices.md  pyproject.toml
dataflow/: Dockerfile  README.md  pyproject.toml  requirements.txt
dataflow/scripts/: build_and_push_docker_image.sh  gcp_setup.sh  run_on_gcp.sh  run_on_local.sh
dataflow/src/comp_pair/: coder.py  ltsim.py  main.py  transform.py  utils.py
notebook/: correlation_analysis.ipynb  create_table_generated_layout_eval.ipynb  sample_size_effects_mmd.ipynb  visualize_response_analysis_results.ipynb
src/app/: measure_explore.py  which_is_closer.py
src/experiments/: correlation_analysis.py  eval_conditional.py  eval_unconditional.py  feature_extraction.py  response_analysis.py  utils.py
src/layout_eval/measures/: docemd.py  docsim.py  fid.py  ltsim.py  maximum_iou.py  mean_iou.py  mmd.py
src/test/: test_measures.py  test_mmd.py
